moved things around to new folders

--- a/yaml/prom-graf-sample-go-app.yaml
+++ b/yaml/prom-graf-sample-go-app.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: sample-go
-        image: lpm10meus2acr.azurecr.io/sample-go:v1
+        image: lpmeus2acr.azurecr.io/sample-go:v1
         ports:
         - name: web
           containerPort: 8080
